--- a/static/css/mixins.less
+++ b/static/css/mixins.less
@@ -6,8 +6,9 @@
 @textDark: #3e3f41;
 @textMedium: #444;
 @textLight: #fff;
+@textDisabled: #ccc;
 
-@btnDefaultLight: #f9fbfd;
+@btnDefaultLight: #fcfcfc;
 @btnDefaultDark: #d8dcde;
 @btnPrimaryLight: #049cdb;
 @btnPrimaryDark: #1972b7;
@@ -15,6 +16,11 @@
 @btnPositiveDark: #57a957;
 @btnNegativeLight: #ee5f5b;
 @btnNegativeDark: #c43c35;
+
+@highlight: #e0ecfa;
+@areaFill: #e7ecf2;
+
+
 
 /* MIXINS */
 
