--- a/static/css/typography.less
+++ b/static/css/typography.less
@@ -4,7 +4,11 @@ input {
   font-family: arial, sans-serif;
   font-size: 14px; }
 
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  margin: 0 0 10px 0; }
 h2 {
   font-size: 22px;
   font-weight: bold;
-  margin: 40px 0 20px 0; }
+  margin: 0 0 10px 0; }
